[project]
name = "quant-api"
version = "0.1.0"
description = "Quant Trend Lab API and background workers"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.21,<1",
  "alembic>=1.16,<2",
  "asyncpg>=0.30,<1",
  "celery[redis]>=5.6.3,<6",
  "fastapi==0.139.2",
  "greenlet>=3.2,<4",
  "httpx>=0.28,<1",
  "oci>=2.182.0,<3",
  "orjson>=3.11,<4",
  "pydantic-settings>=2.10,<3",
  "pykrx==1.2.8",
  "python-multipart>=0.0.20,<1",
  "quant-core",
  "redis>=6.4,<6.5",
  "sqlalchemy>=2.0.43,<3",
  "uvicorn[standard]>=0.51.0,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_api"]

[tool.uv.sources]
quant-core = { workspace = true }
